syntax = "proto3";

package v2ray.core.proxy.shadowsocks;
option csharp_namespace = "V2Ray.Core.Proxy.Shadowsocks";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/shadowsocks";
option java_package = "com.v2ray.core.proxy.shadowsocks";
option java_multiple_files = true;

import "common/net/network.proto";
import "common/protocol/user.proto";
import "common/protocol/server_spec.proto";
import "common/net/packetaddr/config.proto";

message Account {
  string password = 1;
  CipherType cipher_type = 2;

  bool iv_check = 3;
  bool experiment_reduced_iv_head_entropy = 90001;
}

enum CipherType {
  UNKNOWN = 0;
  AES_128_GCM = 1;
  AES_256_GCM = 2;
  CHACHA20_POLY1305 = 3;
  NONE = 4;
  XCHACHA20_POLY1305 = 5;
  AES_192_GCM = 6;

  AES_128_CTR = 7;
  AES_192_CTR = 8;
  AES_256_CTR = 9;
  AES_128_CFB = 10;
  AES_192_CFB = 11;
  AES_256_CFB = 12;
  RC4_MD5 = 13;
  BF_CFB = 14;
  CAMELLIA_128_CFB = 15;
  CAMELLIA_192_CFB = 16;
  CAMELLIA_256_CFB = 17;
  SALSA20 = 18;
  CHACHA20 = 19;
  CHACHA20_IETF = 20;
  XCHACHA20 = 21;
  TABLE = 22;
}

message ServerConfig {
  // UdpEnabled specified whether or not to enable UDP for Shadowsocks.
  // Deprecated. Use 'network' field.
  bool udp_enabled = 1 [deprecated = true];
  v2ray.core.common.protocol.User user = 2;
  repeated v2ray.core.common.net.Network network = 3;
  v2ray.core.net.packetaddr.PacketAddrType packet_encoding = 4;
  string plugin = 5;
  string plugin_opts = 6;
  repeated string plugin_args = 7;
  string plugin_working_dir = 8;
}

message ClientConfig {
  repeated v2ray.core.common.protocol.ServerEndpoint server = 1;
  string plugin = 2;
  string plugin_opts = 3;
  repeated string plugin_args = 4;
  string plugin_working_dir = 5;
  bool uot = 6;
}
